# dotbot-yay

./: README.md  install  pyproject.toml  yaourt.py  yay.py
